# atvmate

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
frontend/: openapi.json  orval.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  style.css
frontend/src/api/: axios-client.ts  generated.schemas.ts
frontend/src/api/default/: default.ts
frontend/src/api/model/: addDeviceRequest.ts  addServerDeviceRequest.ts  addUsbDeviceRequest.ts  apiResponse.ts  deviceDiscovery.ts  deviceList.ts  discoveredDeviceResponse.ts  index.ts  textInputRequest.ts
frontend/src/components/: DPad.tsx  DeviceManager.tsx  Joystick.tsx  MediaControls.tsx
src/: adb_service.rs  atv_controller.rs  device.rs  device_manager.rs  error.rs  global_device_manager.rs  lib.rs  main.rs  remote_device.rs  tcpip_config.rs  web_service.rs
