[package]
name = "atvmate"
version = "0.1.0"
edition = "2024"

[dependencies]
adb_client = { version = "3.0.1", features = [
    "usb",
] }
tokio = { version = "1", features = ["full"] }
poem = { version = "3", features = ["static-files"] }
poem-openapi = { version = "5", features = ["swagger-ui"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
